# src/main/java/vinicius/cornieri/lets/code/challenge/rest/controller/GameController.java
@@ -3,8 +3,11 @@ package vinicius.cornieri.lets.code.challenge.rest.controller;
 import lombok.RequiredArgsConstructor;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
+import org.springframework.transaction.annotation.Transactional;
 import org.springframework.web.bind.annotation.RestController;
+import vinicius.cornieri.lets.code.challenge.domain.model.Player;
 import vinicius.cornieri.lets.code.challenge.domain.service.GameService;
+import vinicius.cornieri.lets.code.challenge.domain.service.PlayerService;
 import vinicius.cornieri.lets.code.challenge.generated.api.GameApi;
 import vinicius.cornieri.lets.code.challenge.generated.domain.view.CurrentGameResponseDto;
 import vinicius.cornieri.lets.code.challenge.generated.domain.view.GameChooseRequestDto;
@@ -17,24 +20,24 @@ public class GameController implements GameApi {
     private final GameService gameService;
 
     @Override
-    public ResponseEntity<CurrentGameResponseDto> gameStartPost() {
-        return new ResponseEntity<>(gameService.startGame(), HttpStatus.CREATED);
+    public ResponseEntity<CurrentGameResponseDto> gameStartPost(String apiKey) {
+        return new ResponseEntity<>(gameService.startGame(apiKey), HttpStatus.CREATED);
     }
 
     @Override
-    public ResponseEntity<GameChooseResponseDto> gameChoosePost(GameChooseRequestDto gameChooseRequestDto) {
-        return ResponseEntity.ok(gameService.processChoice(gameChooseRequestDto));
+    public ResponseEntity<GameChooseResponseDto> gameChoosePost(String apiKey, GameChooseRequestDto gameChooseRequestDto) {
+        return ResponseEntity.ok(gameService.processChoice(apiKey, gameChooseRequestDto));
     }
 
     @Override
-    public ResponseEntity<Void> gameStopPost() {
-        gameService.stopGame();
+    public ResponseEntity<Void> gameStopPost(String apiKey) {
+        gameService.stopGame(apiKey);
         return ResponseEntity.noContent().build();
     }
 
     @Override
-    public ResponseEntity<CurrentGameResponseDto> gameCurrentGet() {
-        return ResponseEntity.ok(gameService.getCurrentActiveGame());
+    public ResponseEntity<CurrentGameResponseDto> gameCurrentGet(String apiKey) {
+        return ResponseEntity.ok(gameService.getCurrentActiveGame(apiKey));
     }
 
 }
